[package]
name = "p2p_handshake"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[example]]
name = "connect"

[[example]]
name = "listen"

[dependencies]
anyhow = "1.0.69"
futures = "0.3.26"
tokio = { version = "1.26.0", features = ["full"] }
