[package]
name = "p2p_handshake"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "seed_peers"

[[bin]]
name = "connect"

[[bin]]
name = "listen"

[dependencies]
anyhow = "1.0.69"
byteorder = "1.4.3"
futures = "0.3.27"
rand = "0.8.5"
sha2 = "0.10.6"
tokio = { version = "1.26.0", features = ["full"] }
